-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 21, 22
-
Component/s: client-libs
-
b02
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8334687 | 21.0.5-oracle | Harshitha Onkar | P3 | Resolved | Fixed | b01 |
| JDK-8335155 | 21.0.5 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8335929 | 17.0.13-oracle | Harshitha Onkar | P3 | Resolved | Fixed | b02 |
| JDK-8337254 | 17.0.13 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8337964 | 11.0.26-oracle | Harshitha Onkar | P3 | Resolved | Fixed | b01 |
| JDK-8340996 | 8u441 | Renjith Kannath Pariyangad | P3 | Resolved | Fixed | b01 |
Currently screencast may fail for various reasons (e.g. the video stream may disconnect).
We need to add another attempt in case of such errors, as it may well succeed.
- backported by
-
JDK-8334687 [Screencast] make a second attempt on screencast failure
-
- Resolved
-
-
JDK-8335155 [Screencast] make a second attempt on screencast failure
-
- Resolved
-
-
JDK-8335929 [Screencast] make a second attempt on screencast failure
-
- Resolved
-
-
JDK-8337254 [Screencast] make a second attempt on screencast failure
-
- Resolved
-
-
JDK-8337964 [Screencast] make a second attempt on screencast failure
-
- Resolved
-
-
JDK-8340996 [Screencast] make a second attempt on screencast failure
-
- Resolved
-
- duplicates
-
JDK-8338903 On wayland sun.awt.screencast.ScreencastHelper.closeSession() never returns
-
- Closed
-
- relates to
-
JDK-8320655 awt screencast robot spin and sync issues with native libpipewire api
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/4dceb877
-
Commit
openjdk/jdk/92fd490f
-
Commit(master)
openjdk/jdk17u-dev/c18ddd88
-
Review
openjdk/jdk21u-dev/786
-
Review
openjdk/jdk/16978
-
Review(master)
openjdk/jdk17u-dev/2743