8321176: remove RuntimeException and address review comments